Sample_App/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample-app
  name: sample-app
spec:
  replicas: 1
  minReadySeconds: 30
  selector:
    matchLabels:
      app: sample-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - image: openops/wise_comparison:0.2
        imagePullPolicy: IfNotPresent
        name: wise-comparison-z9qt6
        ports: 
        - containerPort: 5000
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-app
  name: sample-app
spec:
  ports:
  - port: 8100 
    protocol: TCP
    targetPort: 8100
  selector: 
    app: sample-app
  sessionAffinity: None
  type: NodePort
